# budgeting_telegram_bot_aiogram

./: .gitignore  Procfile  alembic.ini  config.py  degug_alembic.py  main.py  pyproject.toml  requirements.txt
aiogram_modul/: base_command.py  bot.py  bussiness_logic.py  common.py  constants.py  create_db.py  createdb.sql  crypto_graphy.py  db.py  help_functions.py  history.py  keyboard.py  middlewares.py  new_category.py  new_entry.py  statistics.py
alembic/: env.py
alembic/versions/: 5c6dbf2f2c0d_.py  7ef4ef059c4d_.py  7ef4ef059c4d_hash_amount.py  820b1376cc83_hash_category_name.py
database/: base_model.py  db.py  models.py
