[tool.poetry]
name = "budgeting_bot"
version = "0.1.0"
description = ""
authors = ["Anton Kochnevski <kochnevskiia@rocketdata.io>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "0.8.0"
aiogram = "2.19"
aiohttp = "3.8.1"
aiosignal = "1.2.0"
aiosqlite = "0.17.0"
async-timeout = "4.0.2"
asyncpg = "0.25.0"
attrs = "20.3.0"
Babel = "2.9.1"
certifi = "2021.10.8"
chardet = "3.0.4"
charset-normalizer = "2.0.12"
databases = "0.5.5"
environs = "9.5.0"
frozenlist = "1.3.0"
greenlet = "1.1.2"
idna = "2.10"
magic-filter = "1.0.6"
marshmallow = "3.15.0"
multidict = "5.1.0"
packaging = "21.3"
prettytable = "3.2.0"
pydantic = "1.9.0"
Pygments = "2.11.2"
pyparsing = "3.0.8"
pyTelegramBotAPI = "3.7.6"
python-dotenv = "0.20.0"
pytz = "2021.1"
requests = "2.25.1"
SQLAlchemy = "1.4.32"
typing-extensions = "3.7.4.3"
urllib3 = "1.26.3"
wcwidth = "0.2.5"
yarl = "1.6.3"
aenum = "^3.1.11"
cryptography = "^37.0.2"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
